style: spacing fix for headers

--- a/src/tailwind/tailwind.css
+++ b/src/tailwind/tailwind.css
@@ -625,7 +625,9 @@ a[class^='icon-']:hover {
 
 .event-description h2 + br,
 .event-description h3 + br,
-.event-description li + br {
+.event-description li + br,
+.event-description ul + br,
+.event-description ul > br {
   display: none;
 }
 /* css to hide stuff */
